hphp/test/zend/good/ext/mbstring/tests/mb_strcut.php.skipif
<?php extension_loaded('mbstring') or die('skip mbstring not available'); ?>