hphp/test/zend/bad/ext/iconv/tests/iconv004.php.skipif
<?php extension_loaded('iconv') or die('skip iconv extension is not available'); ?>